<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".activities.ChangeProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_view_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_person_loggin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_image"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_change_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_image" />

        <ImageView
            android:id="@+id/image_change_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_camera" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_change_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:inputType="textCapSentences"
        android:textColorHint="@android:color/holo_blue_light"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/edit_text_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textVisiblePassword"
        android:textColorHint="@android:color/holo_blue_light"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/edit_text_change_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/holo_blue_light"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/button_accept_change"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button_cancel_change"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/rounded_border"
            android:textColor="@android:color/holo_blue_light"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>
</LinearLayout>
