<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_view_tickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tickets"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/text_view_tickets_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tickets_number"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_below="@id/text_view_tickets"
        android:layout_marginTop="20dp"/>

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_tickets_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/button_number_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/numberPicker"
        android:layout_toRightOf="@id/numberPicker"
        android:text="@string/cancel"
        android:background="@drawable/rounded_border"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/button_number_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/numberPicker"
        android:layout_marginRight="70dp"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@id/button_number_cancel"
        android:text="@string/accept"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:layout_marginBottom="20dp"/>
</RelativeLayout>