<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingTop="30dp"
    android:paddingRight="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_user"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_person_loggin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="150dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_user_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_view_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_view_email_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/text_view_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_view_date_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/born_date"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_view_born_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_view_phone_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_view_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text=""
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_change_profile"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_button"
                android:text="@string/change_profile"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/rounded_border"
                android:text="@string/exit"
                android:textColor="@android:color/holo_blue_light" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_view_no_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:textAlignment="center"
            android:textSize="30sp" />
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>