<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_fare_system_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fare_system"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_margin="4dp"/>

    <TextView
        android:id="@+id/text_view_next_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_trip"
        android:textSize="20sp"
        android:textAlignment="center"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view_zone"
        android:layout_width="match_parent"
        android:layout_height="240dp">

        <TextView
            android:id="@+id/text_view_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textAlignment="textStart"
            android:layout_marginLeft="20dp"/>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/text_view_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textSize="20sp"
        android:textAlignment="center"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view_done"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/text_view_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textAlignment="textStart"/>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>